<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_end_control</name>
  <version>1.0.0</version>
  <description>C++ end control demos using lbr_fri_ros2.</description>
  <maintainer email="2536890272@qq.com">CarlDegio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <exec_depend>lbr_description</exec_depend>

  <depend>eigen</depend>
  <depend>fri_vendor</depend>
  <depend>kdl_parser</depend>
  <depend>lbr_fri_ros2</depend>
  <depend>lbr_fri_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>